// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate user deps module with absolute paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

// Keeping global imports here is superior to making them bundle entry points
// because this way they become hot-reloadable.
import '/Users/ovidiu/cosmos/src/polyfills.ts';
import '/Users/ovidiu/cosmos/src/global.css';

import decorator0 from '/Users/ovidiu/cosmos/src/cosmos.decorator.tsx';

export const rendererConfig = {
  \\"port\\": 5002
};

export const fixtures = {
  'src/Counter/Counter.fixture.tsx': { lazy: true, getModule: () => import('/Users/ovidiu/cosmos/src/Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { lazy: true, getModule: () => import('/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.tsx') }
};

export const decorators = {
  'src/cosmos.decorator.tsx': decorator0
};
"
`;

exports[`should generate user deps module with relative paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

// Keeping global imports here is superior to making them bundle entry points
// because this way they become hot-reloadable.
import './polyfills.ts';
import './global.css';

import decorator0 from './cosmos.decorator.tsx';

export const rendererConfig = {
  \\"port\\": 5002
};

export const fixtures = {
  'src/Counter/Counter.fixture.tsx': { lazy: true, getModule: () => import('./Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { lazy: true, getModule: () => import('./CounterButton/CounterButton.fixture.tsx') }
};

export const decorators = {
  'src/cosmos.decorator.tsx': decorator0
};
"
`;
